# DSEF

./: README.md  requirements.txt  setup.cfg  setup.py
.github/workflows/: pypi-publish.yml  unit-tests.yml
docs/: Simple-DSEF.ipynb  Solar-Panel.ipynb  Speeds.ipynb
dsef/: __init__.py  dsef.py  line_tools.py
