[metadata]
description=Direct Step Edge Detection package

description-file = README.md

classifiers=
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License
    Intended Audience :: Science/Research
    Programming Language :: Python
    Topic :: Scientific/Engineering,
    Topic :: Scientific/Engineering :: Image Recognition,
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

keywords=
    edge
    edge detection
    edge follower
    computer vision
    image

install_requires=
    matplotlib
    numpy
    scipy
    logging
    opencv-python
